# Vertex-CLI

./: .gitignore  404.html  MANIFEST.in  README.md  Readme.md  ai_models.py  cli.py  index.html  mkdocs.yml  models_api.json  objects.inv  projectnames.txt  prompt.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: ci.yml
cli/: ai_model_manager.py  ai_models.py  chat_history.py  llm.py  prettify_llm_output.py  prompt.py  utils.py
cli_tool_docs/: index.html
contributors_guide/: index.html
docs/: cli_tool_docs.md  contributors_guide.md  index.md  references.md
references/: index.html
search/: search_index.json
tests/: test_ai_models.py  test_commands_BETA.py
