[project]
name = "Vertex-CLI"
version = "0.1.37"
description = "A CLI tool for debugging and generating AI outputs based on prompts"
readme = "README.md"
authors = [
    { name = "Pratham Hole", email = "prathamhole@gmail.com" }
]
dependencies = [
    "rich",
]
license = { text = "BSD License" }
keywords = ["CLI", "AI", "debugging", "prompt"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
[project.urls]
Homepage = "https://github.com/Prtm2110/Vertex-CLI"
Repository = "https://github.com/Prtm2110/Vertex-CLI"

[project.optional-dependencies]
dev = ["twine", "build", "mkdocs-material", "mkdocs-material[imaging]", "mkdocstrings", "mkdocstrings-python"]

[project.scripts]
tex = "cli.prompt:main"
tex-init = "cli.utils:install_requirements"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
