[metadata]
name = Vertex-CLI
version = 0.0.1
author = Pratham Hole
author_email = prathamhole@gmail.com
description = Smart CLI Tool which makes life easier!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Prtm2110/Vertex-CLI
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
